--- a/styles.css
+++ b/styles.css
@@ -1,79 +1,136 @@
-                            body {
-                                color: rgb(11, 11, 77);
-                            }
-                            
-                            body font-face {
-                                font-family: Verdana, Geneva, Tahoma, sans-serif;
-                                font-size: 10 px;
-                                font-weight: lighter;
-                                font-style: normal;
-                            }
-                            
-                            .navigation-links li {
-                                padding: 5px;
-                                margin: 5px;
-                            }
-                            
-                            li {
-                                list-style-type: none;
-                                display: inline;
-                            }
-                            
-                            main,
-                            .blue-background {
-                                background-color: rgb(186, 230, 233);
-                                width: 400px;
-                                border: 5px solid rgb(11, 11, 77);
-                                padding: 55px;
-                                margin: top 40px, right 25px, bottom 55px, left 30px;
-                                font-family: Verdana, Geneva, Tahoma, sans-serif;
-                                font-size: 12px;
-                                font-weight: bold;
-                                font-style: normal;
-                            }
-                            
-                            #portrait {
-                                display: block;
-                                margin-left: auto;
-                                margin-right: auto;
-                            }
-                            
-                            h1 {
-                                font-family: Verdana, Geneva, Tahoma, sans-serif;
-                                font-size: 24px;
-                                font-weight: bold;
-                                font-style: normal;
-                            }
-                            
-                            h2 {
-                                font-family: Verdana, Geneva, Tahoma, sans-serif;
-                                font-size: 20px;
-                                font-weight: bold;
-                                font-style: normal;
-                            }
-                            
-                            h3 {
-                                font-family: Verdana, Geneva, Tahoma, sans-serif;
-                                font-size: 18px;
-                                font-weight: bold;
-                                font-style: normal;
-                            }
-                            
-                            p {
-                                font-family: Verdana, Geneva, Tahoma, sans-serif;
-                                font-size: 12px;
-                                font-weight: lighter;
-                                font-style: normal;
-                            }
-                            
-                            footer,
-                            .black-border {
-                                border: 3px solid darkblue;
-                                width: 280px;
-                                padding: 20px;
-                                margin: 50px;
-                                font-family: Georgia, 'Times New Roman', Times, serif;
-                                font-size: 9px;
-                                font-weight: lighter;
-                                font-style: normal;
-                            }
+                               body font-face {
+                                   font-family: Verdana, Geneva, Tahoma, sans-serif;
+                                   font-size: 10 px;
+                                   font-weight: lighter;
+                                   font-style: normal;
+                               }
+                               
+                               .navigation-links li {
+                                   padding: 5px;
+                                   margin: 5px;
+                               }
+                               
+                               li {
+                                   list-style-type: none;
+                                   display: inline;
+                               }
+                               
+                               main,
+                               .blue-background {
+                                   background-color: rgb(186, 230, 233);
+                                   width: 400px;
+                                   border: 5px solid rgb(11, 11, 77);
+                                   padding: 55px;
+                                   margin: top 40px, right 25px, bottom 55px, left 30px;
+                                   font-family: Verdana, Geneva, Tahoma, sans-serif;
+                                   font-size: 12px;
+                                   font-weight: bold;
+                                   font-style: normal;
+                               }
+                               
+                               #portrait {
+                                   display: block;
+                                   margin-left: auto;
+                                   margin-right: auto;
+                               }
+                               
+                               h1 {
+                                   font-family: Verdana, Geneva, Tahoma, sans-serif;
+                                   font-size: 24px;
+                                   font-weight: bold;
+                                   font-style: normal;
+                               }
+                               
+                               h2 {
+                                   font-family: Verdana, Geneva, Tahoma, sans-serif;
+                                   font-size: 20px;
+                                   font-weight: bold;
+                                   font-style: normal;
+                               }
+                               
+                               h3 {
+                                   font-family: Verdana, Geneva, Tahoma, sans-serif;
+                                   font-size: 18px;
+                                   font-weight: bold;
+                                   font-style: normal;
+                               }
+                               
+                               p {
+                                   font-family: Verdana, Geneva, Tahoma, sans-serif;
+                                   font-size: 12px;
+                                   font-weight: lighter;
+                                   font-style: normal;
+                               }
+                               
+                               footer,
+                               .black-border {
+                                   background-color: rgb(246, 248, 250);
+                                   border: 3px solid darkblue;
+                                   width: 280px;
+                                   padding: 20px;
+                                   margin: 50px;
+                                   font-family: Georgia, 'Times New Roman', Times, serif;
+                                   font-size: 9px;
+                                   font-weight: lighter;
+                                   font-style: normal;
+                               }
+                               
+                               @media (min-width: 320px) {
+                                   body {
+                                       background-color: rgb(0, 128, 0);
+                                       color: rgb(19, 5, 82);
+                                   }
+                               }
+                               
+                               @media (min-width: 768px) {
+                                   body {
+                                       background-color: rgb(72, 192, 16);
+                                       color: rgb(66, 10, 139);
+                                   }
+                               }
+                               
+                               @media (min-width: 1024px) {
+                                   body {
+                                       background-color: rgb(116, 236, 51);
+                                       color: rgb(21, 15, 46);
+                                   }
+                               }
+                               /* Dit grijze blok is een stuk code dat je kan copy pasten in een CSS bestand    
+   * en kan aanroepen in je HTML om te zien hoe het eruit gaat zien. 
+   * Je kunt het ook alleen doorlezen als je het direct begrijpt.                              
+   * /                                                                             
+  /* Hiermee wordt de grootte van h1 voor het eerst aangepast van de standaard         
+   * browserstyle. */
+                               
+                               h1 {
+                                   font-size: 40px;
+                               }
+                               /* Nu komt de browser aan bij de eerste media query. Als het venster een                                                      
+ * minimale breedte van 768 pixels heeft wordt deze stijlspecificatie gelezen        
+ * en uitgevoerd. Zo **niet**, dan worden ze **niet** gelezen en **niet** uitgevoerd. */
+                               
+                               @media (min-width: 768px) {
+                                   h1 {
+                                       font-size: 50px;
+                                   }
+                               }
+                               /* De tweede media query. Hetzelfde geldt weer voor de minimal breedte, maar         
+ * nu voor 320 pixels. Let op! Een breedte van 800 pixels voldoet aan de eerste      
+ * media query, maar ook aan deze! Dat betekent dat de font-size van h1              
+ * nogmaals wordt aangepast. */
+                               
+                               @media (min-width: 320px) {
+                                   h1 {
+                                       font-size: 20px;
+                                   }
+                               }
+                               /* Als we nu hieronder _nog een keer_ het formaat van h1 aanpassen voert de browser dat        
+ * netjes als laatste uit en wordt al ons werk van hierboven overgeschreven, ongeacht de         
+ * grootte van het browservenster. */
+                               
+                               h1 {
+                                   font-size: 60px;
+                               }
+                               /* Conclusie: de volgorde van je CSS maakt uit. Kijk goed naar je media                
+ * queries en redeneer over wat je verwacht aan te treffen op basis van hoe          
+ * de browser je code gaat lezen -- van boven naar beneden! */
